fix the text wrap

--- a/src/components/PortfolioModal.css
+++ b/src/components/PortfolioModal.css
@@ -1,3 +1,7 @@
 .modal-body img{
     max-height: 400px;
 }
+
+.modal-body p {
+    word-wrap: break-word;
+}
